Added GUI
I've cleaned some stuff up, but mostly I added javafx to the project and created a basic template for how the game would look.